--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@
   color: #ffffff;
   text-align: center;
   padding: 1rem 2rem;
+  margin-top: 10px;
   font-size: 0.9rem;
   left: 0;
   font-family: 'Segoe UI', sans-serif;
