--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -402,7 +402,7 @@
     flex-grow: 1;
     overflow-y: visible; /* No scroll on desktop */
     display: flex;
-    justify-content: flex-end; /* Align main nav items to the right */
+    justify-content: center;
     padding: 0; /* Remove padding from scroll wrapper on desktop */
   }
 
